; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_adm6996.c_adm6996_disable_vlan_6996l.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_adm6996.c_adm6996_disable_vlan_6996l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adm6996_priv = type { i32 }

@ADM_NUM_VLANS = common dso_local global i32 0, align 4
@ADM_SYSC3 = common dso_local global i32 0, align 4
@ADM_TBV = common dso_local global i32 0, align 4
@ADM_MAC_CLONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adm6996_priv*)* @adm6996_disable_vlan_6996l to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adm6996_disable_vlan_6996l(%struct.adm6996_priv* %0) #0 {
  %2 = alloca %struct.adm6996_priv*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.adm6996_priv* %0, %struct.adm6996_priv** %2, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %14, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @ADM_NUM_VLANS, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %17

9:                                                ; preds = %5
  %10 = load %struct.adm6996_priv*, %struct.adm6996_priv** %2, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ADM_VLAN_MAP(i32 %11)
  %13 = call i32 @w16(%struct.adm6996_priv* %10, i32 %12, i32 0)
  br label %14

14:                                               ; preds = %9
  %15 = load i32, i32* %4, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %4, align 4
  br label %5

17:                                               ; preds = %5
  %18 = load %struct.adm6996_priv*, %struct.adm6996_priv** %2, align 8
  %19 = load i32, i32* @ADM_SYSC3, align 4
  %20 = call i32 @r16(%struct.adm6996_priv* %18, i32 %19)
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* @ADM_TBV, align 4
  %22 = xor i32 %21, -1
  %23 = load i32, i32* %3, align 4
  %24 = and i32 %23, %22
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* @ADM_MAC_CLONE, align 4
  %26 = xor i32 %25, -1
  %27 = load i32, i32* %3, align 4
  %28 = and i32 %27, %26
  store i32 %28, i32* %3, align 4
  %29 = load %struct.adm6996_priv*, %struct.adm6996_priv** %2, align 8
  %30 = load i32, i32* @ADM_SYSC3, align 4
  %31 = load i32, i32* %3, align 4
  %32 = call i32 @w16(%struct.adm6996_priv* %29, i32 %30, i32 %31)
  ret void
}

declare dso_local i32 @w16(%struct.adm6996_priv*, i32, i32) #1

declare dso_local i32 @ADM_VLAN_MAP(i32) #1

declare dso_local i32 @r16(%struct.adm6996_priv*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
